--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -994,7 +994,7 @@
 
         $.ajax({
             type: "POST",
-            url: "/api/course_progress/",
+            url: "/api/add-content-progress/",
             data: data,
             //contentType: "application/json; charset=utf-8",
             //dataType: "json",
