--- a/students/templates/students/course/list.html
+++ b/students/templates/students/course/list.html
@@ -52,7 +52,7 @@
                     <div class="row">
                         <div class="col">
                             <a href="{% url 'student_course_certificate' course.id %}" class="btn btn-secondary btn-sm">
-                                 Certificate
+                                 View Certificate
                             </a>
                         </div>
 
