--- a/students/templates/students/course/certificate.html
+++ b/students/templates/students/course/certificate.html
@@ -5,10 +5,15 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid py-0 px-0">
+<div>
 
     {% if certificate_valid == True %}
     <main class="page-content shadow">
+        <div class="my-2 text-right">
+        
+            <a href="{% url 'student_download_certificate' object.id %}" target="_blank" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                    class="fa fa-download" id="btnDownload"></i> Download Certificate </a>
+        </div>
         <div class="row">
 
             <div class="col">
@@ -27,10 +32,10 @@
 
 {% block scripts %}
 <style>
-iframe {
-    height:700px;
-    border:none;
-    background:#fff;
-}
+    iframe {
+        height: 700px;
+        border: none;
+        background: #fff;
+    }
 </style>
 {% endblock %}
