--- a/students/templates/students/course/certificate_template.html
+++ b/students/templates/students/course/certificate_template.html
@@ -256,7 +256,7 @@
 								Federico Roca CHST ASP</span></b></p>
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
   background:white'><b><span style='font-size:24.0pt;font-family:"Americana BT","serif"'></span></b><b><span
-								style='font-size:24.0pt;font-family:"Americana BT","serif"'>
+								style='font-size:18.0pt;font-family:"Americana BT","serif"'>
 
 								Construction Outreach Trainer</span></b></p>
 
@@ -265,20 +265,19 @@
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
   line-height:150%;background:white'><b><span style='font-size:36.0pt;
   line-height:150%;font-family:"Americana BT","serif";color:green'> {{student_name}} </span></b></p>
-					<p>&nbsp;</p>
 
 					<h1 align=center> {{object.title}} </h1>
 					<p class=MsoNormal align=center><span style='font-size:18.0pt;font-family:"Colonna MT";
-  color:maroon'></span><span style='font-size:13.0pt;font-family:"Colonna MT";color:maroon'>Completion
+  color:maroon'></span><span style='font-size:9.0pt;font-family:"Colonna MT";color:maroon'>Completion
 							Date {{completed_date}}</span></p>
-					
+
 
 					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
   background:white'><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>
 							</span></b></p>
 					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
   background:white;margin-top:15pt;'><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>
-							</span></b><b><span style='font-size:20.0pt;font-family:"Americana BT","serif"'>
+							</span></b><b><span style='font-size:16.0pt;font-family:"Americana BT","serif"'>
 								Federico Roca CHST ASP </span></b></p>
 					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
   background:white'><b><span style='font-family:"Americana BT","serif"'>
@@ -292,13 +291,13 @@
   background:white'><b><span style='font-family:"Americana BT","serif"'>
 							</span></b><b><span style='font-family:"Americana BT","serif"'>Authorized
 								Trainer Region II Atlantic OHSA Training Ctr.# 12-000107272</span></b></p>
-					<p class=MsoNormal align=center style='text-align:center'>
+					<p class=MsoNormal align=right style='margin-right:.75pt;text-align:right;
+  background:white;margin-top:4pt;'>
+  <span style='font-size:6pt;font-family:"Americana BT","serif"'>
+								Certificate ID: {{ref_number}}</span>
+						
 					</p>
-					<p class=MsoNormal> </p>
-					<p class=MsoNormal>&nbsp;</p>
-					<p class=MsoNormal>&nbsp;</p>
-					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
-  background:white'>&nbsp;</p>
+
 				</td>
 			</tr>
 		</table>
