--- a/students/templates/students/course/list.html
+++ b/students/templates/students/course/list.html
@@ -27,7 +27,7 @@
                             <h5 class="card-title m-0">
                                 {{ course.title }}
                             </h5>
-                             <small class="text-muted">Instructor: {{course.owner}}</small>
+                            <small class="text-muted">Instructor: {{course.owner}}</small>
                             <small class="text-muted"> , Modules: {{course.modules.count}}</small>
                             <small class="text-muted"> , Status:
 
@@ -52,7 +52,7 @@
                     <div class="row">
                         <div class="col">
                             <a href="{% url 'student_course_certificate' course.id %}" class="btn btn-secondary btn-sm">
-                                 View Certificate
+                                View Certificate
                             </a>
                         </div>
 
@@ -61,6 +61,15 @@
                                 {% trans 'Continue' %} <i class="fa fa-arrow-right"></i>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <a href="{% url 'course_evaluate' course.id %}" class="btn btn-secondary btn-sm">
+                                Evualate Course
+                            </a>
+                        </div>
+
+                        
                     </div>
                 </div>
             </div>
