--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -187,6 +187,7 @@
                 <a href="#">Support</a>
                 <a href="{% url 'legal_detail' %}">Legal</a>
                 <a href="{% url 'student_manual_detail' %}">Student Manual</a>
+                      <a href="{% url 'faq' %}">FAQ</a>
                 <a href="#">Sitemap</a>
             </div>
 
