--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -69,6 +69,27 @@
       </li>
 
       <!-- Divider -->
+      <hr class="sidebar-divider my-0">
+
+      <!-- Nav Item - Dashboard -->
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+          aria-expanded="false" aria-controls="collapseUtilities">
+          <i class="fab fa-fw fa-accusoft"></i>
+          <span>Evaluation</span>
+        </a>
+        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar"
+          style="">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">View Evaluation:</h6>
+            <a class="collapse-item" href="{% url 'admin_evaluations' %}">Course Evaluations</a>
+           
+          </div>
+        </div>
+      </li>
+
+      <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
 
       <!-- Sidebar Toggler (Sidebar) -->
@@ -178,6 +199,7 @@
   <script src="{% static "/sb-admin/vendor/bootbox/bootbox.all.min.js" %}"></script>
   <script src="{% static "/sb-admin/vendor/toastr/toastr.min.js" %}"></script>
   <script src="{% static "/sb-admin/vendor/jquery.form.min.js" %}"></script>
+  <script src="{% static "/sb-admin/vendor/moment.min.js" %}"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
