--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -84,7 +84,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">View Evaluation:</h6>
             <a class="collapse-item" href="{% url 'admin_evaluations' %}">Course Evaluations</a>
-           
+            <a class="collapse-item" href="{% url 'admin_assessments' %}">Course Assessment</a>
           </div>
         </div>
       </li>
