--- a/students/templates/students/course/certificate_template.html
+++ b/students/templates/students/course/certificate_template.html
@@ -314,7 +314,7 @@
   background:white'><b><span style='font-family:"Americana BT","serif"'>Authorized
 								Trainer Region II Atlantic OHSA Training Ctr.# 12-00010727</span></b></p>
 					<p class=MsoNormal align=center style='text-align:center'>
-					<img width=313 height=93 id="Picture 9" src="http://127.0.0.1:8000/static/cert-files/image002.png"></p>
+					<img width=313 height=93 id="Picture 9" src="{{sign_image}}"></p>
 					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
 					<p class=MsoNormal align=center style='text-align:center'>&nbsp;</p>
 					<p class=MsoNormal align=center style='margin-right:.75pt;text-align:center;
