--- a/app_quiz/templates/quiz_course.html
+++ b/app_quiz/templates/quiz_course.html
@@ -3,23 +3,24 @@
 {% load staticfiles %}
 
 {% block title %}
-{% trans 'Add Quiz - Module' %}
+{% trans 'Add Quiz - Course' %}
 {% endblock %}
 
 {% block content %}
 
-<div class="container mt-3">
+<div class="container-fluid mt-3">
     <div class="quiz">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{% url 'manage_course_list' %}">{% trans 'Courses' %}</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'manage_course_list' %}">{% trans 'Back to Courses' %}</a></li>
                 <li class="breadcrumb-item active" aria-current="page">{% trans 'Add Quiz' %}</li>
+                  
             </ol>
         </nav>
     </div>
 
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-7">
             <div class="card">
                 <div class="card-header">
                     Add/Update Question
@@ -40,38 +41,40 @@
                             <div class="col-md-12">
                                 {{ form.as_p }}
                             </div>
+
                             <div class="col-md-12 {% if formset.errors %} danger {% endif %}">
 
                                 {% for error in formset.non_form_errors %}
                                 <div class="text-danger">{{ error }}</div>
                                 {% endfor %}
 
-                                <div class="question">
+                                <div class="question row">
                                     {% for form in formset %}
 
-                                    <div class="card mb-2">
-                                        <div class="card-body">
-                                            <div>
-                                                {% for hidden in form.hidden_fields %} {{ hidden }} {% endfor %}
+                                    <div class="col-md-6">
+                                        <div class="card mb-2">
+
+                                            <div class="card-header">
+                                                ({{ forloop.counter }}) - Answer
                                             </div>
 
-                                            <div class="row">
-                                                <div class="col-md-12 small">
-                                                    <label for="lbl">Answer Title </label>
+                                            <div class="card-body">
+                                                <div>
+                                                    {% for hidden in form.hidden_fields %} {{ hidden }} {% endfor %}
                                                 </div>
-                                                <div class="col-md-12">
-                                                    {{ form.text }}
-                                                </div>
-                                            </div>
-
-                                            <div class="row">
-                                                <div class="col-md-12">
-                                                    <div class="checkbox">
-                                                        <span class="text-muted ">Correct answer?
-                                                            {{ form.is_correct }}</span>
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        {{ form.text }}
                                                     </div>
                                                 </div>
-
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <div class="checkbox">
+                                                            <span class="text-muted ">Correct answer?
+                                                                {{ form.is_correct }}</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -87,19 +90,23 @@
                 </div>
 
                 <div class="card-footer">
-                    <button class="btn btn-primary" type="submit" id="btnSaveQues">{% trans 'Save' %}</button>
+                    <button class="btn btn-primary" type="submit" id="btnSaveQues">{% trans 'Save Question' %}</button>
+                    <a class="btn btn-secondary" href="{% url "quiz_course" course.id %}">
+                        Add New Question
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-5">
             <div class="card">
-                <div class="card-header">
-                    Questions List
+                <div class="card-header bg-secondary text-white">
+                    Added Questions
                 </div>
                 <div class="card-body">
                     <div>
                         {% for item in questions %}
 
+                       <div class="mb-3">
                         <div class="accordion">
                             <h5>
                                 {{item}}
@@ -111,9 +118,7 @@
                                         {{answer}}
 
                                         {% if answer.is_correct == True %}
-                                        <span class="pull-right">
-                                            Correct Answer
-                                        </span>
+                                        <span class="badge badge-success pull-right">Correct Answer</span>    
                                         {%endif%}
 
                                     </li>
@@ -128,6 +133,7 @@
                                 <button class="btn btn-info btn-sm" pk="{{item.id}}">Delete</button>
                             </div>
                         </div>
+                       </div>
 
                         {% endfor %}
                     </div>
@@ -146,11 +152,15 @@
 
 {% block scripts %}
 
-  <link href="{% static "/plugins/jquery/jquery-ui.css" %}" rel="stylesheet">
+<link href="{% static "/plugins/jquery/jquery-ui.css" %}" rel="stylesheet">
 
 <style>
     .buttons {
         padding: 5px;
+    }
+
+    .errorlist li {
+        color: #d31919;
     }
 </style>
 
@@ -163,7 +173,8 @@
         $("form label").css('justify-content', 'left');
 
         $(".accordion").accordion({
-            collapsible: true, active: false
+            collapsible: true,
+            active: false
         });
 
         $("#btnSaveQues").click(function () {
@@ -175,8 +186,7 @@
 
             if ($(this).text() == 'Edit') {
                 window.location = $(this).attr('href');
-            }
-            else if ($(this).text() == 'Delete') {
+            } else if ($(this).text() == 'Delete') {
                 var id = $(this).attr('pk');
                 deleteQuestion(id);
             }
